Completing the website layout for web and mobile/table screen view

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
     <!--Rover Header-->
     <header class="rover-header-container">
       <section class="rover-header-left">
-        <img class="rover-header-image" src="img/logo.png" alt="Rover logo">
-        <a class="rover-header-link" href="#">Search Sitters</a>
-        <a class="rover-header-link" href="#">Become a Sitter</a>
-        <a class="rover-header-link" href="#">Our Services</a>
+        <img class="rover-header-image" src="img/logo.png" alt="Rover logo" width="180">
+        <nav>
+          <a class="rover-header-link" href="#">Search Sitters</a>
+          <a class="rover-header-link" href="#">Become a Sitter</a>
+          <a class="rover-header-link" href="#">Our Services</a>
+        </nav>
       </section>
       <section class="rover-header-right">
         <a class="rover-header-link" href="#">Sign Up</a>
@@ -35,10 +37,16 @@
 
     <!--Rover Hero Container-->
     <section class="rover-hero-container">
-      <h1 class="rover-hero-title">We're the Dog People</h1>
-      <p>Book trusted, local pet sitters and walkers who will care for your dog or cat like you would.</p>
-      <div class="rover-button rover-cta">Search</div>
-      <div class="rover-button rover-cta-mobile">Discover local sitters</div>
+      <div class="rover-hero-title-container">
+        <h1 class="rover-hero-title">We're the Dog People</h1>
+        <p>Book trusted, local pet sitters and walkers who will care for your dog or cat like you would.</p>
+        <div class="rover-button rover-cta">
+          <a class="btn" href="#">Search</a>
+        </div>
+        <div class="rover-button rover-cta-mobile">
+          <a class="btn" href="#">Discover local sitters</a>
+        </div>
+      </div>
     </section>
 
     <!--Rover Facts Container-->
@@ -53,28 +61,38 @@
         <section class="rover-facts-container">
           <div class="rover-fact-indiv rover-fact-indiv-1">
             <img src="img/suitcase.png" alt="Suitcase image">
-            <h3>Dog Boarding</h3>
-            <p>Perfect if you need overnight pet care.</p>
+            <div>
+              <h3>Dog Boarding</h3>
+              <p>Perfect if you need overnight pet care.</p>
+            </div>
           </div>
           <div class="rover-fact-indiv rover-fact-indiv-2">
             <img src="img/house.png" alt="House image">
-            <h3>House Sitting</h3>
-            <p>Great if you need overnight pet or house-sitting services.</p>
+            <div>
+              <h3>House Sitting</h3>
+              <p>Great if you need overnight pet or house-sitting services.</p>
+            </div>
           </div>
           <div class="rover-fact-indiv rover-fact-indiv-3">
             <img src="img/paws.png" alt="Paws image">
-            <h3>Dog walking</h3>
-            <p>Whenever your dog needs a walk.</p>
+            <div>
+              <h3>Dog walking</h3>
+              <p>Whenever your dog needs a walk.</p>
+            </div>
           </div>
           <div class="rover-fact-indiv rover-fact-indiv-4">
             <img src="img/sun.png" alt="Sun image">
-            <h3>Doggy Day Care</h3>
-            <p>Daytime pet care in your sitter’s dog-friendly home.</p>
+            <div>
+              <h3>Doggy Day Care</h3>
+              <p>Daytime pet care in your sitter’s dog-friendly home.</p>
+            </div>
           </div>
           <div class="rover-fact-indiv rover-fact-indiv-5">
             <img src="img/food.png" alt="Food image">
-            <h3>Drop-In Visits</h3>
-            <p>For check-ins and play dates.</p>
+            <div>
+              <h3>Drop-In Visits</h3>
+              <p>For check-ins and play dates.</p>
+            </div>
           </div>
         </section>
 
@@ -90,7 +108,9 @@
                 <li>All sitters provide a detailed profile and personal information</li>
                 <li>All sitters are approved by our team of sitter specialists</li>
               </ul>
-              <div class="rover-cta">Book your next Rover sitter</div>
+              <div class="rover-cta">
+                <a class="rover-cta-btn" href="#">Book your next Rover sitter</a>
+              </div>
             </div>
           </div>
           <p class="rover-protections">All services booked on Rover are backed by the Rover Guarantee, 24/7 Support, Photo Updates, and our <a href="#">Reservation Protection</a>.</p>
@@ -112,19 +132,31 @@
       <h2 class="rover-123-container-title">We’re the treat-your-dog-like-family dog people</h2>
       <div class="rover-123-item-container">
         <div class="rover-123-item">
-          <img src="img/watchglass.png" alt="search">
-          <h3>Search</h3>
-          <p>Read verified reviews and pick the perfect sitter.</p>
+          <div>
+            <img src="img/watchglass.png" alt="search">
+          </div>
+          <div>
+            <h3>Search</h3>
+            <p>Read verified reviews and pick the perfect sitter.</p>
+          </div>
         </div>
         <div class="rover-123-item">
-          <img src="img/phone.png" alt="phone">
-          <h3>Book & pay on Rover</h3>
-          <p>Book and pay securely through the website or app.</p>
+          <div>
+            <img src="img/phone.png" alt="phone">
+          </div>
+          <div>
+            <h3>Book & pay on Rover</h3>
+            <p>Book and pay securely through the website or app.</p>
+          </div>
         </div>
         <div class="rover-123-item">
-          <img src="img/shield.png" alt="shield">
-          <h3>Relax</h3>
-          <p>Get the Rover Guarantee, 24/7 support, and reservation protection.</p>
+          <div>
+            <img src="img/shield.png" alt="shield">
+          </div>
+          <div>
+            <h3>Relax</h3>
+            <p>Get the Rover Guarantee, 24/7 support, and reservation protection.</p>
+          </div>
         </div>
       </div>
     </section>
