Added few JS scripts and modal box
- Created a working menu button when viewed in mobile/tablet mode

- Added modal box when user clicks the 'Sign up' menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
 </head>
 
 <body>
+  <section class="rover-header-right-mobile-menu flex-mobile">
+    <nav>
+      <a class="rover-header-link" href="#">Search Sitters</a>
+      <a class="rover-header-link" href="#">Become a Sitter</a>
+      <a class="rover-header-link" href="#">Our Services</a>
+      <a class="rover-header-link sign-up-modal-box" href="#">Sign Up</a>
+      <a class="rover-header-link" href="#">Sign In</a>
+      <a class="rover-header-link" href="#">Help</a>
+      <button class="menu-mobile-close-btn">X</button>
+    </nav>
+  </section>
+
+  <section class="modal-box-container">
+    <div class="modal-box">
+      <div class="modal-box-close-button">
+        <a href="#">X</a>
+      </div>
+      <div class="modal-box-content">
+        <p>
+          Sign up <strong>MEOW</strong> to experience our lovely <strong><em>'Purr' </em></strong>vice
+        </p>
+        <div>
+          <a href="#">Click Here</a>
+        </div>
+      </div>
+    </div>
+  </section>
   <main class="rover-hp-container">
 
     <!--Rover Header-->
@@ -26,7 +53,7 @@
         </nav>
       </section>
       <section class="rover-header-right">
-        <a class="rover-header-link" href="#">Sign Up</a>
+        <a class="rover-header-link sign-up-modal-box" href="#">Sign Up</a>
         <a class="rover-header-link" href="#">Sign In</a>
         <a class="rover-header-link" href="#">Help</a>
       </section>
