Adding animation onto paws and menu bar (mobile)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <section class="rover-header-right-mobile-menu flex-mobile">
-    <nav>
+    <nav class="show-menu hide-menu">
       <a class="rover-header-link" href="#">Search Sitters</a>
       <a class="rover-header-link" href="#">Become a Sitter</a>
       <a class="rover-header-link" href="#">Our Services</a>
