Replaced the menu 'slide in/out' animation to fade in-out

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <section class="rover-header-right-mobile-menu flex-mobile">
-    <nav class="show-menu hide-menu">
+  <section class="rover-header-right-mobile-menu flex-mobile show-menu hide-menu">
+    <nav>
       <a class="rover-header-link" href="#">Search Sitters</a>
       <a class="rover-header-link" href="#">Become a Sitter</a>
       <a class="rover-header-link" href="#">Our Services</a>
